<resources>
    <string name="app_name">Albion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="homeParagraph1">This screen contains brief instructions on how to use the application. The first time you use it, you need to do a test that will determine your current knowledge of the language. Based on the level of current knowledge, we will be able to offer you certain grammatical units that you should study in order to improve your knowledge. All lessons contain detailed explanations and short self-assessment quizzes. Once you think you have mastered all the recommended lessons, you can retake the test to eventually move to a higher level of and continue learning</string>
    <string name="homeParagraph2">Welcome to Albion, an educational application for learning simple and complex grammatical structures of the English language.</string>
    <string name="homeParagraph3">If you are a first-time user, please take the test so we can determine your current level of English</string>
    <string name="homeParagraph4">Or if you are already in the process of learning and have gotten accustomed to using this app, you can continue studying and learn something new today</string>
    <string name="take_test_button_text">Take the test</string>
    <string name="continue_learning_button_text">Continue learning</string>
    <string name="flag_icon_text_description">slashed British and US flags</string>
    <string name="standardized_test">Standardized test</string>
    <string name="finish_test">Finish test</string>
    <string name="test_intro">Please choose the correct answer in each multiple choices question</string>
    <string name="level_result_paragraph">Analyzing the results of your test, it was concluded that you belong to the proficiency level:</string>
    <string name="number_result_paragraph">The result of your test show that you have scored:</string>
    <string name="go_to_profile_paragraph">To see your previous results, go to your profile</string>
    <string name="go_learn_paragraph">To improve your knowledge, see the new lessons you have been introduced to</string>
    <string name="profile">Profile</string>
    <string name="learn">Learn</string>
    <string name="list_of_past_results">This is a list of your past results</string>
    <string name="currently_at_level">You are currently at level:</string>
</resources>